applications/bff-service/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
  labels:
    app: bff-service
spec:
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      containers:
        - name: bff-service
          image: bff-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 7081
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 7081
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 7081
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            - name: bff-config-volume
              mountPath: /workspace/config
      volumes:
        - name: bff-config-volume
          configMap:
            name: bff-config
