applications/bff-service/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: bff-service-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 80
